// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - CountrySelectDropdown:  should match the snapshot 1`] = `
<DocumentFragment>
  .c2 {
  width: 100%;
  height: 2.75rem;
}

.c2.c2 > div {
  padding: 0.625rem 2.25rem 0.625rem 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c2.c2 > div:focus {
  background-color: transparent;
}

.c2.c2.selectOpen {
  border-radius: 0.25rem 0.25rem 0 0;
}

.c2.c2 .selectBody {
  border-radius: 0 0 0.25rem 0.25rem;
}

.c1.c1.c1 > fieldset {
  border: .0625rem solid #9e9e9e;
}

.c0 {
  margin: 0.5rem 0;
}

.c0:hover {
  border: none;
}

.c4 {
  top: calc(50% - 0.25rem);
  right: 1rem;
}

.c3 {
  width: 1.5rem;
  height: 1.5rem;
}

@media (min-width:524px) {
  .c2 {
    width: 28rem;
  }
}

@media (min-width:1024px) {
  .c2 {
    height: 2rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    height: 1.25rem;
    width: 1.25rem;
  }
}

<div
    class="MuiFormControl-root c0"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root c1 c2 MuiInputBase-formControl"
      data-testid="country-selector-select-menu"
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-country-selector-select"
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
        id="mui-component-select-country-selector-select"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root makeStyles-icon-4"
        >
          <img
            alt="AE"
            class="c3"
            data-testid="header-country-lang-flag"
            src="/static-content/icons/shared/countryflags/ae.png"
          />
        </div>
        United Arab Emirates (AED)
      </div>
      <input
        id="country-selector-select"
        name="country-selector-select"
        type="hidden"
        value="AE"
      />
      <img
        class="c4 material-icons MuiSelect-icon MuiSelect-iconOutlined"
        src="/static-content/icons/shared/chevron.svg"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-6"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - CountrySelectDropdown:  should match the snapshot when countriesList is populated 1`] = `
<DocumentFragment>
  .c2 {
  width: 100%;
  height: 2.75rem;
}

.c2.c2 > div {
  padding: 0.625rem 2.25rem 0.625rem 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c2.c2 > div:focus {
  background-color: transparent;
}

.c2.c2.selectOpen {
  border-radius: 0.25rem 0.25rem 0 0;
}

.c2.c2 .selectBody {
  border-radius: 0 0 0.25rem 0.25rem;
}

.c1.c1.c1 > fieldset {
  border: .0625rem solid #9e9e9e;
}

.c0 {
  margin: 0.5rem 0;
}

.c0:hover {
  border: none;
}

.c4 {
  top: calc(50% - 0.25rem);
  right: 1rem;
}

.c3 {
  width: 1.5rem;
  height: 1.5rem;
}

@media (min-width:524px) {
  .c2 {
    width: 28rem;
  }
}

@media (min-width:1024px) {
  .c2 {
    height: 2rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    height: 1.25rem;
    width: 1.25rem;
  }
}

<div
    class="MuiFormControl-root c0"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root c1 c2 MuiInputBase-formControl"
      data-testid="country-selector-select-menu"
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-country-selector-select"
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
        id="mui-component-select-country-selector-select"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root makeStyles-icon-12"
        >
          <img
            alt="AE"
            class="c3"
            data-testid="header-country-lang-flag"
            src="/static-content/icons/shared/countryflags/ae.png"
          />
        </div>
        United Arab Emirates (AED)
      </div>
      <input
        id="country-selector-select"
        name="country-selector-select"
        type="hidden"
        value="AE"
      />
      <img
        class="c4 material-icons MuiSelect-icon MuiSelect-iconOutlined"
        src="/static-content/icons/shared/chevron.svg"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-13 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-14"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - CountrySelectDropdown:  should match the snapshot when text alignment is right to left 1`] = `
<DocumentFragment>
  .c2 {
  width: 100%;
  height: 2.75rem;
}

.c2.c2 > div {
  padding: 0.625rem 2.25rem 0.625rem 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c2.c2 > div:focus {
  background-color: transparent;
}

.c2.c2.selectOpen {
  border-radius: 0.25rem 0.25rem 0 0;
}

.c2.c2 .selectBody {
  border-radius: 0 0 0.25rem 0.25rem;
}

.c1.c1.c1 > fieldset {
  border: .0625rem solid #9e9e9e;
}

.c0 {
  margin: 0.5rem 0;
}

.c0:hover {
  border: none;
}

.c4 {
  top: calc(50% - 0.25rem);
  right: 1rem;
}

.c3 {
  width: 1.5rem;
  height: 1.5rem;
}

@media (min-width:524px) {
  .c2 {
    width: 28rem;
  }
}

@media (min-width:1024px) {
  .c2 {
    height: 2rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    height: 1.25rem;
    width: 1.25rem;
  }
}

<div
    class="MuiFormControl-root c0"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root c1 c2 MuiInputBase-formControl"
      data-testid="country-selector-select-menu"
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-country-selector-select"
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
        id="mui-component-select-country-selector-select"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiListItemIcon-root makeStyles-icon-20"
        >
          <img
            alt="AE"
            class="c3"
            data-testid="header-country-lang-flag"
            src="/static-content/icons/shared/countryflags/ae.png"
          />
        </div>
        United Arab Emirates (AED)
      </div>
      <input
        id="country-selector-select"
        name="country-selector-select"
        type="hidden"
        value="AE"
      />
      <img
        class="c4 material-icons MuiSelect-icon MuiSelect-iconOutlined"
        src="/static-content/icons/shared/chevron.svg"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-22"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
